--- a/apps-config/my-app.yml
+++ b/apps-config/my-app.yml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: myapp-argo-application
-  namespace: argocd
+  namespace: apps-configs
 spec:
   project: default
 
