--- a/apps-config/my-app.yml
+++ b/apps-config/my-app.yml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: myapp-argo-application
   namespace: apps-config
+    finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   project: default
 
