--- a/argo-apps/app-config-2.yml
+++ b/argo-apps/app-config-2.yml
@@ -14,3 +14,7 @@ spec:
     path: my-apps/app2
     repoURL: https://github.com/jcrelling/argocd-demo-config.git
     targetRevision: HEAD
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true    
