--- a/argo-apps/app-config-1.yml
+++ b/argo-apps/app-config-1.yml
@@ -7,7 +7,7 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: argocd
+    namespace: app1-ns
     server: https://kubernetes.default.svc
   project: default
   source:
