--- a/argo-apps/app-config-1.yml
+++ b/argo-apps/app-config-1.yml
@@ -15,7 +15,8 @@ spec:
     repoURL: https://github.com/jcrelling/argocd-demo-config.git
     targetRevision: HEAD
   syncPolicy:
+    syncOptions:
+    - CreateNamespace=true
     automated:
       prune: true
       selfHeal: true
-      CreateNamespace: true
