--- a/my-apps/app1/app1.yml
+++ b/my-apps/app1/app1.yml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:latest
+        image: nginx:stable
         ports:
         - containerPort: 80
