--- a/argo-apps/app-config-3.yml
+++ b/argo-apps/app-config-3.yml
@@ -11,8 +11,8 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: my-apps/app3
-    repoURL: https://github.com/jcrelling/argocd-demo-config.git
+    path: .
+    repoURL: https://github.com/jcrelling/argocd-demo-app3.git
     targetRevision: HEAD
   syncPolicy:
     automated:
