--- a/argo-apps/app-config-2.yml
+++ b/argo-apps/app-config-2.yml
@@ -7,7 +7,7 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: argocd
+    namespace: app2-ns
     server: https://kubernetes.default.svc
   project: default
   source:
@@ -15,6 +15,8 @@ spec:
     repoURL: https://github.com/jcrelling/argocd-demo-app2.git
     targetRevision: HEAD
   syncPolicy:
+    syncOptions:
+    - CreateNamespace=true
     automated:
       prune: true
       selfHeal: true    
