--- a/argo-apps/app-demo-3.yml
+++ b/argo-apps/app-demo-3.yml
@@ -7,14 +7,16 @@ metadata:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
-    namespace: argocd
+    namespace: app3-ns
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: .
     repoURL: https://github.com/jcrelling/argocd-demo-app3.git
     targetRevision: HEAD
+    path: .
   syncPolicy:
+    syncOptions:
+    - CreateNamespace=true
     automated:
       prune: true
-      selfHeal: true    
+      selfHeal: true
